# opskrifter

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md
docs/desserts/: pandekager.md  rødgrød-med-fløde.md
docs/forretter/: gravlaks.md
docs/hverdagsmad/: biksemad.md  hakkebof.md  kylling-pastasuppe.md  leverpostej.md  tarteletter.md
docs/kager/: brunede-kartofler.md  drømmekage.md  kringle.md
docs/vegetar/: grønkålssalat.md  ratatouille.md
opskrifter/: CLAUDE.md  mkdocs.yml
opskrifter/.github/workflows/: deploy-docs.yml
opskrifter/docs/: index.md
opskrifter/docs/desserts/: chokoladekage.md  tiramisu.md
opskrifter/docs/fisk/: fiskeboller.md  fiskefrikadeller.md  stegt-rødspætte.md
opskrifter/docs/forretter/: blomkålssuppe.md  bruschetta.md  hummus.md  sild-med-løg.md
opskrifter/docs/hverdagsmad/: asiatisk-nudelsalat.md  flæskesteg.md  frikadeller.md  kyllingefilet-med-feta.md  pasta-carbonara.md  pizza-bolo.md  stegt-flæsk-med-persillesovs.md
opskrifter/docs/kager/: hindbærsnitter.md  æblekage.md
opskrifter/docs/vegetar/: grøntsagsgryde.md  risotto-med-svampe.md  rodfrugter-fra-ovnen.md
opskrifter/site/: sitemap.xml
opskrifter/site/search/: search_index.json
site/: 404.html  index.html
site/desserts/chokoladekage/: index.html
site/forretter/hummus/: index.html
site/hverdagsmad/asiatisk-nudelsalat/: index.html
site/hverdagsmad/kylling-pastasuppe/: index.html
site/hverdagsmad/kyllingefilet-med-feta/: index.html
site/hverdagsmad/pasta-carbonara/: index.html
site/hverdagsmad/pizza-bolo/: index.html
(+4 files in other folders)
