[project]
name = "opskrifter"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathias Svante",email = "mser@inspari.dk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "opskrifter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
